--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:site_name" content="">
   <meta property="og:description" content="">
 
-  
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -44,6 +44,10 @@
 </head>
 
 <body>
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
   
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
