--- a/index.html
+++ b/index.html
@@ -44,6 +44,47 @@
 </head>
 
 <body>
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div class="hero-container">
+      <video preload="none" playsinline autoplay loop id="bgvideo">
+        <source src="./assets/video/cinematic.mp4" type="video/mp4">
+      </video>
+      <a id="mute" class="btn-services btn btn-outline-light"><i class="fa fa-volume-xmark fa-beat"
+          style="--fa-animation-duration: 2s;"></i></a>
+  
+      <div id="banner-discord" class="">
+        <a class="d-flex align-items-center justify-content-center" href="discord.gg/auranyx">
+          <img src="./assets/img/discord.svg" width="75" height="75" class="d-inline-block align-top" alt="">
+          <p class="text-white m-auto fs-5">Join Our<br>Discord Server</p>
+        </a>
+      </div>
+  
+      <div class="container-fluid" data-aos="fade-in">
+        <div class="row justify-content-center">
+          <div class="col-xl-4 col-lg-6 order-1 order-lg-1 hero-logo">
+            <img class="" src="assets/img/logo.png" alt="Auranyx">
+          </div>
+          <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-2 d-flex flex-column justify-content-center">
+            <h2 class="fs-5 text-center">
+              Vuoi giocare a un gioco di ruolo e iniziare la tua nuova vita? Allora gioca sul nostro server RP:
+              AuranyxRP! <br>Tutto ciò di cui hai bisogno è Grand Theft Auto 5, un
+              auricolare e Teamspeak.<br><br>
+              <span class="typed"
+                data-typed-items="Pronto? Allora unisciti al nostro Discord e scopri di più sul nostro progetto!"></span>
+              <br>
+            </h2>
+            <div class="actions">
+              <a href="#about" class="btn-get-started">Unisciti al Server</a>
+              <a href="#" class="btn-services">Visita lo Store</a>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Hero -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
