Add Header + Navbar

--- a/index.html
+++ b/index.html
@@ -86,6 +86,54 @@
   </section>
   <!-- End Hero -->
 
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex align-items-center justify-content-between">
+  
+      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo-txt.png" alt=""></a>
+      <!-- <h1 class="logo mr-auto"><a href="index.html">Auranyx RP</a></h1> -->
+  
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">Chi Siamo</a></li>
+          <li><a class="nav-link scrollto" href="#featured">Store</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Galleria</a></li>
+          <li><a class="nav-link scrollto" href="#faq">Domande Frequenti</a></li>
+          <li class="dropdown"><a href="#"><span>Guide</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./pages/command.html">Mappatura Tasti 📜</a></li>
+              <li><a href="#">Tokovoip</a></li>
+              <li><a href="#">test 1</a></li>
+              <li><a href="#">test 2</a></li>
+            </ul>
+          </li>
+  
+          <li class="dropdown"><a href="#"><span>Regolamenti</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Regolamento Server 📜</a></li>
+              <li class="dropdown"><a href="#"><span>Regolamento &#8211; Fazioni</span> <i
+                    class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Regolamento Mafie</a></li>
+                  <li><a href="#">Regolamento Gang</a></li>
+                  <!-- <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li> -->
+                </ul>
+              </li>
+              <li><a href="#">Regolamento &#8211; LSPD</a></li>
+              <li><a href="#">Regolamento &#8211; LSFD</a></li>
+              <li><a href="#">Regolamento Discord ✨</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+  
+    </div>
+  </header><!-- End Header -->
+
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
