add get started section

--- a/index.html
+++ b/index.html
@@ -130,9 +130,39 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-  
     </div>
-  </header><!-- End Header -->
+  </header>
+  
+  <!-- End Header -->
+
+  <main id="main">
+  
+    <!-- ======= About Section ======= -->
+    <section id="about" class="bg-cover">
+      <div class="container" data-aos="fade-up">
+        <div class="container about-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row justify-content-between align-items-center">
+  
+            <div class="col-md-6 about-content">
+              <h2 class="about-title text-uppercase"><span class="">Unisciti</span> oggi stesso!</h2>
+              <p class="about-text">
+                Inizia una nuova vita virtuale: personalizza il tuo personaggio, trova un lavoro e guida l'auto che
+                preferisci. Il mondo
+                è a tua disposizione: ti verranno offerte opportunità come mai prima. Hai già giocato a un altro
+                progetto o sei un principiante
+                RP completo? Non importa! Diamo il benvenuto sia ai nuovi arrivato che ai giocatori esperti. Vivi la
+                città dalla tua prospettiva.
+              </p>
+            </div>
+  
+            <div class="col-lg-6 about-img">
+              <img src="assets/img/about.png" alt="">
+            </div>
+  
+          </div>
+        </div>
+    </section>
+    <!-- End About Section -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
