add link to button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           style="--fa-animation-duration: 2s;"></i></a>
   
       <div id="banner-discord" class="">
-        <a class="d-flex align-items-center justify-content-center" href="discord.gg/auranyx">
+        <a class="d-flex align-items-center justify-content-center" href="discord.gg/auranyx" target="_blank">
           <img src="./assets/img/discord.svg" width="75" height="75" class="d-inline-block align-top" alt="">
           <p class="text-white m-auto fs-5">Join Our<br>Discord Server</p>
         </a>
@@ -75,8 +75,8 @@
               <br>
             </h2>
             <div class="actions">
-              <a href="#about" class="btn-get-started">Unisciti al Server</a>
-              <a href="#" class="btn-services">Visita lo Store</a>
+              <a href="#getstarted" class="btn-get-started">Unisciti al Server</a>
+              <a href="https://store.auranyx.it/" target="_blank" class="btn-featured">Visita lo Store</a>
             </div>
           </div>
   
@@ -130,8 +130,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     </div>
-  </header>
-  
+  </header>  
   <!-- End Header -->
 
   <main id="main">  
@@ -189,7 +188,7 @@
           <div class="col-lg-3 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
               class="purecounter"></span>
-            <p>Ore di</p>
+            <p>Ore di Gioco</p>
           </div>
     
         </div>
